[package]
name = "kvs"
version = "0.1.0"
authors = ["Sebastian Mendoza sebastian.mendoza@uwaterloo.ca"]
description = "A key-value store"
edition = "2021"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.18", features = ["cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "=1.0.1"
anyhow = "1.0.89"
thiserror = "1.0.64"


[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

